# SandMan

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
examples/: CMakeLists.txt  tests.cpp
src/: CMakeLists.txt
src/application/: app.cpp
src/execution/: CMakeLists.txt  execution_manager.cpp
src/execution/include/sandman/execution/: manager.hpp
src/execution/tests/: tests.cpp
